--- a/JustDoIt/JustDoIt/JustDoIt.WebApi/appsettings.json
+++ b/JustDoIt/JustDoIt/JustDoIt.WebApi/appsettings.json
@@ -1,8 +1,8 @@
 {
   "UseInMemoryDatabase": false,
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=.;Initial Catalog=JustDoItDb;Integrated Security=True;MultipleActiveResultSets=True",
-    "IdentityConnection": "Data Source=.;Initial Catalog=identityDb;Integrated Security=True;MultipleActiveResultSets=True"
+    "DefaultConnection": "Data Source=desktop-qlvr6qp\\mssqlserveruyv;Initial Catalog=JustDoItDb;Integrated Security=True;MultipleActiveResultSets=True",
+    "IdentityConnection": "Data Source=desktop-qlvr6qp\\mssqlserveruyv;Initial Catalog=identityDb;Integrated Security=True;MultipleActiveResultSets=True"
   },
   "Serilog": {
     "Using": [],
