--- a/JustDoIt/JustDoIt/JustDoIt.Infrastructure.Identity/JustDoIt.Infrastructure.Identity.csproj
+++ b/JustDoIt/JustDoIt/JustDoIt.Infrastructure.Identity/JustDoIt.Infrastructure.Identity.csproj
@@ -21,5 +21,6 @@
   </ItemGroup>
 <ItemGroup>
   <ProjectReference Include="..\JustDoIt.Application\JustDoIt.Application.csproj" />
+  <ProjectReference Include="..\JustDoIt.Infrastructure.Persistence\JustDoIt.Infrastructure.Persistence.csproj" />
 </ItemGroup>
 </Project>
