--- a/JustDoIt/JustDoIt/JustDoIt.Infrastructure.Persistence/JustDoIt.Infrastructure.Persistence.csproj
+++ b/JustDoIt/JustDoIt/JustDoIt.Infrastructure.Persistence/JustDoIt.Infrastructure.Persistence.csproj
@@ -10,6 +10,8 @@
     <Compile Remove="Migrations\20200627124316_Updates.Designer.cs" />
     <Compile Remove="Migrations\20200724180907_New.cs" />
     <Compile Remove="Migrations\20200724180907_New.Designer.cs" />
+    <Compile Remove="Migrations\20210613120719_ParentTaskFix.cs" />
+    <Compile Remove="Migrations\20210613120719_ParentTaskFix.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
