fixed bug on table Tasks
delete old migration tasks model and edit new conntect migration to base data

--- a/JustDoIt/JustDoIt/JustDoIt.Infrastructure.Persistence/JustDoIt.Infrastructure.Persistence.csproj
+++ b/JustDoIt/JustDoIt/JustDoIt.Infrastructure.Persistence/JustDoIt.Infrastructure.Persistence.csproj
@@ -12,6 +12,14 @@
     <Compile Remove="Migrations\20200724180907_New.Designer.cs" />
     <Compile Remove="Migrations\20210613120719_ParentTaskFix.cs" />
     <Compile Remove="Migrations\20210613120719_ParentTaskFix.Designer.cs" />
+    <Compile Remove="Migrations\20210613161102_testthisproblem.cs" />
+    <Compile Remove="Migrations\20210613161102_testthisproblem.Designer.cs" />
+    <Compile Remove="Migrations\20210613161707_testthisproblem2.cs" />
+    <Compile Remove="Migrations\20210613161707_testthisproblem2.Designer.cs" />
+    <Compile Remove="Migrations\20210613162011_testthisproblem3.cs" />
+    <Compile Remove="Migrations\20210613162011_testthisproblem3.Designer.cs" />
+    <Compile Remove="Migrations\20210613185650_testupdateTest.cs" />
+    <Compile Remove="Migrations\20210613185650_testupdateTest.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
